--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 .titulo{
     background-color: black;
-    font-family: sans-serif;
-    font-size: 15px;
+    font-family: font-family: "Rubik Mono One", monospace;
+  font-weight: 400;
+  font-style: normal;;
+    font-size: 20px;
     text-align: center;
     color: white;
 }
