--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
-.titulo{
-    background-color: black;
-    font-family: font-family: "Rubik Mono One", monospace;
-  font-weight: 400;
-  font-style: normal;;
-    font-size: 20px;
-    text-align: center;
-    color: white;
+*{
+  margin: 0;
+  padding: 0;
+}
+
+.texto1{
+  background-color: rgb(221, 221, 221);
+  border-radius: 8px;
+  height: 300px;
+  width: 250px;
+  
 }
