--- a/style.css
+++ b/style.css
@@ -20,8 +20,8 @@ body {
 
 /* Estilo para os títulos */
 h1 {
-    font-family: 'Rubik Mono One', monospace;
-    font-size: 2.2em;
+    font-family: sans-serif;
+    font-size: 20px;
     text-align: center;
     margin-bottom: 20px;
 }
