--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     padding: 30px;
     background-color: #fff;
     border-radius: 8px;
+    justify-content: center;
 }
 
 
@@ -39,5 +40,4 @@ p {
 img{
     height: 100px;
     width: 100px;
-    margin-left: 50%;
 }
